# take-notes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_all.sh
src/: main.cpp
